# manos_capabilities

./: CMakeLists.txt  package.xml
src/: pnp_based_on_tf.jl  scene_test.py
tests/: manual_pnp.jl  pnp.py  pnp_based_on_tf.jl
